--- a/backend/backend/requirements.txt
+++ b/backend/backend/requirements.txt
@@ -4,7 +4,7 @@ asgiref==3.8.1
 certifi==2025.4.26
 charset-normalizer==3.4.1
 click==8.1.8
-Django==5.2
+Django==4.0.9
 django-cors-headers==4.7.0
 django-filter==25.1
 djangorestframework==3.16.0
@@ -24,5 +24,6 @@ sqlparse==0.5.3
 starlette==0.46.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
-urllib3==2.4.0
+urllib3==1.24.3
 uvicorn==0.34.2
+mysqlclient==2.1.1
